# python-mlx-server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  smoke_test.py
src/mlx_server/: __init__.py  config.py  main.py  registry.py
src/mlx_server/api/: app.py  chat.py  convert.py  embeddings.py  models.py
src/mlx_server/conversion/: __init__.py  gguf.py  hf.py  jobs.py
src/mlx_server/managers/: __init__.py  embedding.py  generative.py  vlm.py
tests/: test_api.py  test_conversion.py
