[project]
name = "python-mlx-server"
version = "0.1.0"
description = "A lightweight OpenAI-compatible API server for running MLX models on Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.0",
    "mlx>=0.30.6",
    "mlx-lm>=0.30.7",
    "mlx-embeddings>=0.0.5",
    "mlx-vlm>=0.1.25",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mlx-server = "mlx_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
